codegen/parser/pdl_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package parser // Pdl
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PdlParser struct {
	*antlr.BaseParser
}

var pdlParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func pdlParserInit() {
	staticData := &pdlParserStaticData
	staticData.literalNames = []string{
		"", "'array'", "'enum'", "'fixed'", "'import'", "'optional'", "'package'",
		"'map'", "'namespace'", "'record'", "'typeref'", "'union'", "'includes'",
		"'('", "')'", "'{'", "'}'", "'['", "']'", "'@'", "':'", "'.'", "'='",
		"", "'null'",
	}
	staticData.symbolicNames = []string{
		"", "ARRAY", "ENUM", "FIXED", "IMPORT", "OPTIONAL", "PACKAGE", "MAP",
		"NAMESPACE", "RECORD", "TYPEREF", "UNION", "INCLUDES", "OPEN_PAREN",
		"CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET",
		"AT", "COLON", "DOT", "EQ", "BOOLEAN_LITERAL", "NULL_LITERAL", "SCHEMADOC_COMMENT",
		"BLOCK_COMMENT", "LINE_COMMENT", "NUMBER_LITERAL", "STRING_LITERAL",
		"ID", "WS", "PROPERTY_ID", "ESCAPED_PROP_ID",
	}
	staticData.ruleNames = []string{
		"document", "namespaceDeclaration", "packageDeclaration", "importDeclarations",
		"importDeclaration", "typeReference", "typeDeclaration", "namedTypeDeclaration",
		"scopedNamedTypeDeclaration", "anonymousTypeDeclaration", "typeAssignment",
		"propDeclaration", "propNameDeclaration", "propJsonValue", "recordDeclaration",
		"enumDeclaration", "enumSymbolDeclarations", "enumSymbolDeclaration",
		"enumSymbol", "typerefDeclaration", "fixedDeclaration", "unionDeclaration",
		"unionTypeAssignments", "unionMemberDeclaration", "unionMemberAlias",
		"arrayDeclaration", "arrayTypeAssignments", "mapDeclaration", "mapTypeAssignments",
		"fieldSelection", "fieldIncludes", "fieldDeclaration", "fieldDefault",
		"typeName", "identifier", "propName", "propSegment", "schemadoc", "object",
		"objectEntry", "array", "jsonValue", "string", "number", "bool", "nullValue",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PdlParserInit initializes any static state used to implement PdlParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPdlParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PdlParserInit() {
	staticData := &pdlParserStaticData
	staticData.once.Do(pdlParserInit)
}

// NewPdlParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPdlParser(input antlr.TokenStream) *PdlParser {
	PdlParserInit()
	this := new(PdlParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &pdlParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// PdlParser tokens.
const (
	PdlParserEOF               = antlr.TokenEOF
	PdlParserARRAY             = 1
	PdlParserENUM              = 2
	PdlParserFIXED             = 3
	PdlParserIMPORT            = 4
	PdlParserOPTIONAL          = 5
	PdlParserPACKAGE           = 6
	PdlParserMAP               = 7
	PdlParserNAMESPACE         = 8
	PdlParserRECORD            = 9
	PdlParserTYPEREF           = 10
	PdlParserUNION             = 11
	PdlParserINCLUDES          = 12
	PdlParserOPEN_PAREN        = 13
	PdlParserCLOSE_PAREN       = 14
	PdlParserOPEN_BRACE        = 15
	PdlParserCLOSE_BRACE       = 16
	PdlParserOPEN_BRACKET      = 17
	PdlParserCLOSE_BRACKET     = 18
	PdlParserAT                = 19
	PdlParserCOLON             = 20
	PdlParserDOT               = 21
	PdlParserEQ                = 22
	PdlParserBOOLEAN_LITERAL   = 23
	PdlParserNULL_LITERAL      = 24
	PdlParserSCHEMADOC_COMMENT = 25
	PdlParserBLOCK_COMMENT     = 26
	PdlParserLINE_COMMENT      = 27
	PdlParserNUMBER_LITERAL    = 28
	PdlParserSTRING_LITERAL    = 29
	PdlParserID                = 30
	PdlParserWS                = 31
	PdlParserPROPERTY_ID       = 32
	PdlParserESCAPED_PROP_ID   = 33
)

// PdlParser rules.
const (
	PdlParserRULE_document                   = 0
	PdlParserRULE_namespaceDeclaration       = 1
	PdlParserRULE_packageDeclaration         = 2
	PdlParserRULE_importDeclarations         = 3
	PdlParserRULE_importDeclaration          = 4
	PdlParserRULE_typeReference              = 5
	PdlParserRULE_typeDeclaration            = 6
	PdlParserRULE_namedTypeDeclaration       = 7
	PdlParserRULE_scopedNamedTypeDeclaration = 8
	PdlParserRULE_anonymousTypeDeclaration   = 9
	PdlParserRULE_typeAssignment             = 10
	PdlParserRULE_propDeclaration            = 11
	PdlParserRULE_propNameDeclaration        = 12
	PdlParserRULE_propJsonValue              = 13
	PdlParserRULE_recordDeclaration          = 14
	PdlParserRULE_enumDeclaration            = 15
	PdlParserRULE_enumSymbolDeclarations     = 16
	PdlParserRULE_enumSymbolDeclaration      = 17
	PdlParserRULE_enumSymbol                 = 18
	PdlParserRULE_typerefDeclaration         = 19
	PdlParserRULE_fixedDeclaration           = 20
	PdlParserRULE_unionDeclaration           = 21
	PdlParserRULE_unionTypeAssignments       = 22
	PdlParserRULE_unionMemberDeclaration     = 23
	PdlParserRULE_unionMemberAlias           = 24
	PdlParserRULE_arrayDeclaration           = 25
	PdlParserRULE_arrayTypeAssignments       = 26
	PdlParserRULE_mapDeclaration             = 27
	PdlParserRULE_mapTypeAssignments         = 28
	PdlParserRULE_fieldSelection             = 29
	PdlParserRULE_fieldIncludes              = 30
	PdlParserRULE_fieldDeclaration           = 31
	PdlParserRULE_fieldDefault               = 32
	PdlParserRULE_typeName                   = 33
	PdlParserRULE_identifier                 = 34
	PdlParserRULE_propName                   = 35
	PdlParserRULE_propSegment                = 36
	PdlParserRULE_schemadoc                  = 37
	PdlParserRULE_object                     = 38
	PdlParserRULE_objectEntry                = 39
	PdlParserRULE_array                      = 40
	PdlParserRULE_jsonValue                  = 41
	PdlParserRULE_string                     = 42
	PdlParserRULE_number                     = 43
	PdlParserRULE_bool                       = 44
	PdlParserRULE_nullValue                  = 45
)

// IDocumentContext is an interface to support dynamic dispatch.
type IDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDocumentContext differentiates from other interfaces.
	IsDocumentContext()
}

type DocumentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDocumentContext() *DocumentContext {
	var p = new(DocumentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PdlParserRULE_document
	return p
}

func (*DocumentContext) IsDocumentContext() {}

func NewDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DocumentContext {
	var p = new(DocumentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PdlParserRULE_document

	return p
}

func (s *DocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *DocumentContext) ImportDeclarations() IImportDeclarationsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportDeclarationsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportDeclarationsContext)
}

func (s *DocumentContext) TypeDeclaration() ITypeDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeDeclarationContext)
}

func (s *DocumentContext) NamespaceDeclaration() INamespaceDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamespaceDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamespaceDeclarationContext)
}

func (s *DocumentContext) PackageDeclaration() IPackageDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPackageDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPackageDeclarationContext)
}

func (s *DocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DocumentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PdlListener); ok {
		listenerT.EnterDocument(s)
	}
}

func (s *DocumentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PdlListener); ok {
		listenerT.ExitDocument(s)
	}
}

func (p *PdlParser) Document() (localctx IDocumentContext) {
	this := p
	_ = this

	localctx = NewDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PdlParserRULE_document)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(93)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == PdlParserNAMESPACE {
		{
			p.SetState(92)
			p.NamespaceDeclaration()
		}

	}
	p.SetState(96)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == PdlParserPACKAGE {
		{
			p.SetState(95)
			p.PackageDeclaration()
		}

	}
	{
		p.SetState(98)
		p.ImportDeclarations()
	}
	{
		p.SetState(99)
		p.TypeDeclaration()
	}

	return localctx
}

// INamespaceDeclarationContext is an interface to support dynamic dispatch.
type INamespaceDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNamespaceDeclarationContext differentiates from other interfaces.
	IsNamespaceDeclarationContext()
}

type NamespaceDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNamespaceDeclarationContext() *NamespaceDeclarationContext {
	var p = new(NamespaceDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PdlParserRULE_namespaceDeclaration
	return p
}

func (*NamespaceDeclarationContext) IsNamespaceDeclarationContext() {}

func NewNamespaceDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NamespaceDeclarationContext {
	var p = new(NamespaceDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PdlParserRULE_namespaceDeclaration

	return p
}

func (s *NamespaceDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *NamespaceDeclarationContext) NAMESPACE() antlr.TerminalNode {
	return s.GetToken(PdlParserNAMESPACE, 0)
}

func (s *NamespaceDeclarationContext) TypeName() ITypeNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeNameContext)
}

func (s *NamespaceDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NamespaceDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NamespaceDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PdlListener); ok {
		listenerT.EnterNamespaceDeclaration(s)
	}
}

func (s *NamespaceDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PdlListener); ok {
		listenerT.ExitNamespaceDeclaration(s)
	}
}

func (p *PdlParser) NamespaceDeclaration() (localctx INamespaceDeclarationContext) {
	this := p
	_ = this

	localctx = NewNamespaceDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PdlParserRULE_namespaceDeclaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(101)
		p.Match(PdlParserNAMESPACE)
	}
	{
		p.SetState(102)
		p.TypeName()
	}

	return localctx
}

// IPackageDeclarationContext is an interface to support dynamic dispatch.
type IPackageDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPackageDeclarationContext differentiates from other interfaces.
	IsPackageDeclarationContext()
}

type PackageDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPackageDeclarationContext() *PackageDeclarationContext {
	var p = new(PackageDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PdlParserRULE_packageDeclaration
	return p
}

func (*PackageDeclarationContext) IsPackageDeclarationContext() {}

func NewPackageDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PackageDeclarationContext {
	var p = new(PackageDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PdlParserRULE_packageDeclaration

	return p
}

func (s *PackageDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *PackageDeclarationContext) PACKAGE() antlr.TerminalNode {
	return s.GetToken(PdlParserPACKAGE, 0)
}

func (s *PackageDeclarationContext) TypeName() ITypeNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeNameContext)
}

func (s *PackageDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PackageDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PackageDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PdlListener); ok {
		listenerT.EnterPackageDeclaration(s)
	}
}

func (s *PackageDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PdlListener); ok {
		listenerT.ExitPackageDeclaration(s)
	}
}

func (p *PdlParser) PackageDeclaration() (localctx IPackageDeclarationContext) {
	this := p
	_ = this

	localctx = NewPackageDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PdlParserRULE_packageDeclaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(104)
		p.Match(PdlParserPACKAGE)
	}
	{
		p.SetState(105)
		p.TypeName()
	}

	return localctx
}

// IImportDeclarationsContext is an interface to support dynamic dispatch.
type IImportDeclarationsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImportDeclarationsContext differentiates from other interfaces.
	IsImportDeclarationsContext()
}

type ImportDeclarationsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportDeclarationsContext() *ImportDeclarationsContext {
	var p = new(ImportDeclarationsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PdlParserRULE_importDeclarations
	return p
}

func (*ImportDeclarationsContext) IsImportDeclarationsContext() {}

func NewImportDeclarationsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportDeclarationsContext {
	var p = new(ImportDeclarationsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PdlParserRULE_importDeclarations

	return p
}

func (s *ImportDeclarationsContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportDeclarationsContext) AllImportDeclaration() []IImportDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IImportDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IImportDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IImportDeclarationContext); ok {
			tst[i] = t.(IImportDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *ImportDeclarationsContext) ImportDeclaration(i int) IImportDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportDeclarationContext)
}

func (s *ImportDeclarationsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportDeclarationsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportDeclarationsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PdlListener); ok {
		listenerT.EnterImportDeclarations(s)
	}
}

func (s *ImportDeclarationsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PdlListener); ok {
		listenerT.ExitImportDeclarations(s)
	}
}

func (p *PdlParser) ImportDeclarations() (localctx IImportDeclarationsContext) {
	this := p
	_ = this

	localctx = NewImportDeclarationsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, PdlParserRULE_importDeclarations)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(110)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == PdlParserIMPORT {
		{
			p.SetState(107)
			p.ImportDeclaration()
		}

		p.SetState(112)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IImportDeclarationContext is an interface to support dynamic dispatch.
type IImportDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetType_ returns the type_ rule contexts.
	GetType_() ITypeNameContext

	// SetType_ sets the type_ rule contexts.
	SetType_(ITypeNameContext)

	// IsImportDeclarationContext differentiates from other interfaces.
	IsImportDeclarationContext()
}

type ImportDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	type_  ITypeNameContext
}

func NewEmptyImportDeclarationContext() *ImportDeclarationContext {
	var p = new(ImportDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PdlParserRULE_importDeclaration
	return p
}

func (*ImportDeclarationContext) IsImportDeclarationContext() {}

func NewImportDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportDeclarationContext {
	var p = new(ImportDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PdlParserRULE_importDeclaration

	return p
}

func (s *ImportDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportDeclarationContext) GetType_() ITypeNameContext { return s.type_ }

func (s *ImportDeclarationContext) SetType_(v ITypeNameContext) { s.type_ = v }

func (s *ImportDeclarationContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(PdlParserIMPORT, 0)
}

func (s *ImportDeclarationContext) TypeName() ITypeNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeNameContext)
}

func (s *ImportDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PdlListener); ok {
		listenerT.EnterImportDeclaration(s)
	}
}

func (s *ImportDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PdlListener); ok {
		listenerT.ExitImportDeclaration(s)
	}
}
